# alertsquid

./: .gitignore  README.md  add_features.md  alertsquid.py  nota_pfsense.md  notas python.md  por hacer.md  por hacer.txt  pyproject.toml  randongen.sh  service_systemd.service
src/alertsquid/: alertsquid.py  service_init.sh  service_pfs.sh
