[project]
name = "alertsquid"
version = "0.1.0"
description = ""
authors = [
    {name = "roilanbr",email = "roilanbr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "alertsquid", from = "src"}]

#[tool.poetry.scripts]
#alertsquid = "alertsquid:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
